fix: change `canvas z-index`

--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,8 @@ code {
 .particles-js-canvas-el{
   position: fixed;
   top: 0px;
-  z-index: 0;
+  z-index: -1;
+}
+body{
+  background-color:black;
 }
